fix: hide block list on small devices (fix #89)

--- a/client/styles.scss
+++ b/client/styles.scss
@@ -664,6 +664,10 @@ body {
   }
 
   .blocks-list {
+    @media only screen and (max-width: 767px) {
+      display: none; 
+    }
+    
     margin-top: 0.2em;
 
     .block {
